[package]
name = "sanctuary"
version = "0.1.0"
edition = "2021"
authors = ["ln2r <scorch_62@live.com>"]

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.6", features = ['http', 'd1'] }
worker-macros = { version = "0.6", features = ['http'] }
console_error_panic_hook = { version = "0.1.7" }
http = "1.3"
serde = "1.0.219"
chrono = "0.4.41"
uuid = { version = "1.18.0", features = ["v7", "js"] }